2020-02-12 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpz/cmp.c: Avoid overflow on int even for huge sizes.
	* mpz/cmpabs.c: Likewise.

2020-02-09 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/generic/sqrmod_bnm1.c (mpn_bc_sqrmod_bnp1):
	Shorter mpn_sqr.
	* mpn/generic/mulmod_bnm1.c (mpn_bc_mulmod_bnp1):
	Shorter mpn_mul_n.

	* tests/mpn/t-mulmod_bnm1.c: Trigger special cases more often.
	* tests/mpn/t-sqrmod_bnm1.c: Likewise.

2020-02-09 Seth Troisi <sethtroisi@google.com>

	* tests/mpz/t-nextprime.c: Split into sub-tests.

2020-02-02 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/generic/powm.c: Better handling of current window-size.
	* mpn/generic/powlo.c: Likewise.

	* mpn/generic/jacbase.c (mpn_jacobi_base): Optimise _METHOD 4.
	* mpz/aors.h: Branches optimisation.

2020-01-31 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/generic/powm.c (MPN_REDC_0): Subtractive redc
	(mpn_2powm): New, static, function
	* tests/mpz/t-powm.c: More tests for the base=2 case.

2020-01-24  Niels Möller  <nisse@lysator.liu.se>

	* mpn/generic/hgcd2_jacobi.c (div1, div2): Deleted. Instead,
	include hgcd2-div.h, to reuse the tuned implementations for hgcd2.
	(mpn_hgcd2_jacobi): Adapt to different return value for div1. Also
	other small changes to make it identical to mpn_hgcd2, except for
	the updates of the jacobi-related state.

	* mpn/generic/hgcd2.c (div1, div2): Move inline functions...
	* mpn/generic/hgcd2-div.h: ... to a separate file.

2020-01-17  Torbjörn Granlund  <tg@gmplib.org>

	* Version 6.2.0 released.

	* gmp-h.in (__GNU_MP__): Bump.
	(__GNU_MP_VERSION,__GNU_MP_VERSION_MINOR,__GNU_MP_VERSION_PATCHLEVEL):
	Bump version info.
	* Makefile.am (LIBGMP_LT_*, LIBGMPXX_LT_*, LIBMP_LT_*):
	Bump version info.

2020-01-15  Torbjörn Granlund  <tg@gmplib.org>

	* mpn/x86_64/bt1/gcd_11.asm: Add missing FUNC_EXIT.

2020-01-10  Torbjörn Granlund  <tg@gmplib.org>

	* longlong.h (powerpc): Add clobbers, make formatting cleanups.
